@@ -238,3 +238,8 @@ Mon Aug 15 18:14:36 2011                        Michael Jennings (mej)
 
 Work in progress:  Util.pm tests
 ----------------------------------------------------------------------
+Tue Aug 16 09:54:03 2011                        Michael Jennings (mej)
+
+This should fix the index generation.  Don't have unit tests for the
+ObjectSet yet, so I can't say for sure....  :-)
+----------------------------------------------------------------------
